--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,18 @@
             <scope>provided</scope>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>ch.qos.logback</groupId>-->
+<!--            <artifactId>logback-classic</artifactId>-->
+<!--            <version>1.4.12</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.codehaus.janino</groupId>-->
+<!--            <artifactId>janino</artifactId>-->
+<!--            <version>3.1.10</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
     <build>
