--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 
-bot.name=*****
-bot.token=*****
+bot.name=
+bot.token=
